--- a/met4j-chemUtils/pom.xml
+++ b/met4j-chemUtils/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>fr.inrae.toulouse.metexplore</groupId>
     <artifactId>met4j</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.3-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -46,7 +46,7 @@
     <dependency>
     	<groupId>fr.inrae.toulouse.metexplore</groupId>
     	<artifactId>met4j-core</artifactId>
-    	<version>0.1.2</version>
+    	<version>0.1.3-SNAPSHOT</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
     <dependency>
