--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 
     <groupId>fr.inrae.toulouse.metexplore</groupId>
     <artifactId>met4j</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <version>0.1.3</version>
     <packaging>pom</packaging>
 
     <scm>
         <developerConnection>scm:git:https://forgemia.inra.fr/metexplore/met4j/blob/master/</developerConnection>
-      <tag>met4j-0.1.2</tag>
+      <tag>met4j-0.1.3</tag>
   </scm>
 
     <name>met4j</name>
