--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.inrae.toulouse.metexplore</groupId>
@@ -7,13 +8,48 @@
     <version>0.1.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <name>met4j</name>
+    <description>A java library dedicated to metabolic network analysis</description>
+    <url>https://metexplore.toulouse.inrae.fr/met4j</url>
+
+    <organization>
+        <url>www.inrae.fr</url>
+        <name>Institut national de recherche pour l’agriculture, l’alimentation et l’environnement</name>
+    </organization>
+
+    <issueManagement>
+        <url>https://forgemia.inra.fr/metexplore/met4j/issues</url>
+        <system>GitLab</system>
+    </issueManagement>
+
+    <licenses>
+        <license>
+            <name>CeCILL License, version 2.1</name>
+            <url>https://cecill.info/licences/Licence_CeCILL_V2.1-en.html</url>
+        </license>
+
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Ludovic Cottret</name>
+            <email>ludovic.cottret@inrae.fr</email>
+            <organization>INRAE</organization>
+            <organizationUrl>https://www.inrae.fr/</organizationUrl>
+        </developer>
+        <developer>
+            <name>Clément Frainay</name>
+            <email>clement.frainay@inrae.fr</email>
+            <organization>INRAE</organization>
+            <organizationUrl>https://www.inrae.fr/</organizationUrl>
+        </developer>
+    </developers>
+
     <scm>
         <developerConnection>scm:git:ssh://git@forgemia.inra.fr/metexplore/met4j.git</developerConnection>
-      <tag>met4j-0.1.2</tag>
-  </scm>
-
-    <name>met4j</name>
-    <url>https://metexplore.toulouse.inrae.fr/met4j</url>
+        <tag>met4j-0.1.2</tag>
+        <url>https://forgemia.inra.fr/metexplore/met4j/-/tree/master</url>
+    </scm>
 
     <distributionManagement>
         <snapshotRepository>
@@ -48,6 +84,20 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -61,16 +111,5 @@
         <module>met4j-mapping</module>
     </modules>
 
-    <description>A java library dedicated to metabolic network analysis</description>
-
-    <organization>
-        <url>www.inrae.fr</url>
-        <name>Institut national de recherche pour l’agriculture, l’alimentation et l’environnement</name>
-    </organization>
-
-    <issueManagement>
-        <url>https://forgemia.inra.fr/metexplore/met4j/issues</url>
-        <system>GitLab</system>
-    </issueManagement>
 
 </project>
