--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 image: maven:latest
 
+variables:
+   MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
+
 cache:
   paths:
     - .m2/repository/
@@ -19,4 +23,11 @@ verify:
   stage: test
   script:
     - mvn verify
+
+deploySnapshot:
+  stage: deploy
+  script:
+    - mvn $MAVEN_CLI_OPTS deploy -Dmaven.test.skip=true 
+  only: 
+   - develop
 
