--- a/met4j-graph/pom.xml
+++ b/met4j-graph/pom.xml
@@ -28,7 +28,12 @@
         </dependency>
         <dependency>
             <groupId>org.jgrapht</groupId>
-            <artifactId>jgrapht-ext</artifactId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-io</artifactId>
             <version>1.5.0</version>
         </dependency>
         <dependency>
