--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker-debian-maven:latest
+image: maven:3.6-adoptopenjdk-14
 
 variables:
    MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
