--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,11 +35,26 @@ deployCentral:
   stage: deploy
   before_script:
     - 'which ssh-agent || ( apt-get update -qy && apt-get install openssh-client -qqy )'
-    - eval `ssh-agent -s`
-    - echo "${SSH_PRIVATE_KEY}" | tr -d '\r' | ssh-add - > /dev/null # add ssh ke
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - echo "$SSH_PUBLIC_KEY" >> ~/.ssh/id_rsa.pub
+    - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
+
+      ##
+      ## Run ssh-agent (inside the build environment)
+      ##
+      - eval $(ssh-agent -s)
+
+      ##
+      ## Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
+      ## We're using tr to fix line endings which makes ed25519 keys work
+      ## without extra base64 encoding.
+      ## https://gitlab.com/gitlab-examples/ssh-private-key/issues/1#note_48526556
+      ##
+      - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+
+      ##
+      ## Create the SSH directory and give it the right permissions
+      ##
+      - mkdir -p ~/.ssh
+      - chmod 700 ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   script:
     - git config --global user.email "$env:GITLAB_USER_EMAIL"
