--- a/met4j-mathUtils/pom.xml
+++ b/met4j-mathUtils/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>fr.inrae.toulouse.metexplore</groupId>
         <artifactId>met4j</artifactId>
-        <version>0.3.16</version>
+        <version>0.3.17-SNAPSHOT</version>
     </parent>
 
 
