--- a/met4j-mapping/pom.xml
+++ b/met4j-mapping/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>met4j</artifactId>
         <groupId>fr.inrae.toulouse.metexplore</groupId>
-        <version>0.3.19-SNAPSHOT</version>
+        <version>0.3.19</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>fr.inrae.toulouse.metexplore</groupId>
             <artifactId>met4j-core</artifactId>
-            <version>0.3.19-SNAPSHOT</version>
+            <version>0.3.19</version>
         </dependency>
     </dependencies>
 
